test/files/neg/t9781.scala
object T9781 {
  val c: collection.mutable.Map[Int, Int] = ???
  c(undefinedSymbol) += 1
}
